# zeronews

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240324193002_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: config.yaml  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: new_sub.rs  sub_email.rs  sub_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
