[package]
name = "zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.35"
config = "0.14.0"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.1", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.7.0", features = ["v4"] }
validator = "0.17.0"

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
once_cell = "1.19.0"
rand_core = "0.6.4"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.0"
serde_json = "1.0.114"
linkify = "0.10.0"
